--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,10 +5,10 @@
         </p>
     <div class="spacing"></div>
 
-    <h4>Recent Posts</h4>
+    <h4>Last Posts</h4>
     <div class="hline"></div>
         <ul class="popular-posts">
-            {% for post in site.posts limit:4 %} 
+            {% for post in site.posts limit:3 %} 
                 <li>
                 {% if post.thumb %}
                     <a href="{{ post.url  | prepend: site.baseurl }}"><img src="{{ "/assets/img/blog/thumbs/" | prepend: site.baseurl }}{{ post.thumb }}" alt="Popular Post"></a>
